# ece448_hw

mp01/: mp01_notebook.ipynb  submitted.py
mp02/: mp02_notebook.ipynb  submitted.py
mp03/: mp03_notebook.ipynb  submitted.py
mp04/: mp04_notebook.ipynb  submitted.py
mp05/: mp05_notebook.ipynb  submitted.py
mp06/: grade.py  main.py  mp06_notebook.ipynb  note.py  sample.py  submitted.py
mp06/tests/: test_visible.py
mp07/: mp07_notebook.ipynb  submitted.py
mp08/: mp08_notebook.ipynb  submitted.py
mp09/: mp09_notebook.ipynb  pyproject.toml  submitted.py
mp10/: mp10_notebook.ipynb  submitted.py
mp10/tests/: test_visible.py
mp11/: mp11_notebook.ipynb  submitted.py  test.npz  trained_model.npz
